--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,10 @@ url:            "https://nypark425.github.io"
 
 # Author
 author:
-  name:         ppknna
+  name:         Amber
   url:          https://nypark425.github.io
   email:        nypark425@gmail.com
+  desc:         안녕하세요, 관심분야가 두루두루 많은 개발자입니다.
 
 # Build settings
 markdown:       kramdown
