--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 # Site settings
-title:          Do Something.
+title:          Stay with Joy.
 description:    "The only source of knowledge is experience."
 baseurl:        ""
-url:            "https://dorongii.github.io"
+url:            "https://staywithjoy.github.io"
 
 # Author
 author:
-  name:         Zoe
+  name:         Joy
   namekr:       나연(Na-yeon)
-  url:          https://dorongii.github.io
+  url:          https://staywithjoy.github.io
   email:        nypark425@gmail.com
-  desc:         안녕하세요, 하루하루의 행복을 추구하는 개발자입니다.
+  desc:         하루 하루의 즐거움이 곧 삶이다.
 
 # Build settings
 markdown:       kramdown
